# LinearMPCQuadruped

./: .gitignore  readme.md
quadruped_control/code_sh/: push_rviz_to_dog.sh
quadruped_control/quadruped_control/: CMakeLists.txt  package.xml
quadruped_control/quadruped_control/config/a1/: gazebodog.yaml  realdog.yaml
quadruped_control/quadruped_control/config/rviz/: dog_visualization.rviz
quadruped_control/quadruped_control/launch/: dog_visualization.launch  gazebodog.launch  mpc_debug.launch  realdog.launch
quadruped_control/quadruped_control/src/dog/: dog_control.cpp  dog_control.h  dog_state.cpp  dog_state.h
quadruped_control/quadruped_control/src/gait/: walk_gait.cpp
quadruped_control/quadruped_control/src/grf_controller/: mpc_controller.cpp
quadruped_control/quadruped_control/src/instance/: gazebo_dog.cpp  gazebo_dog.h  real_dog.cpp  real_dog.h
quadruped_control/quadruped_control/src/legKinematics/: leg_kinematics.cpp  leg_kinematics.h
quadruped_control/quadruped_control/src/perception/: StateEstimate.cpp  StateEstimate.h
quadruped_control/quadruped_control/src/test/: mpc_debug.cpp  spdlog_test.cpp
quadruped_control/quadruped_control/src/utils/: InfoToROS.cpp  RobotLog.cpp  RobotLog.h  keyboard_cmdvel.py
quadruped_control/quadruped_joy/: CMakeLists.txt  package.xml
quadruped_control/quadruped_joy/config/: quadruped_joy_gazebo.yaml
quadruped_control/quadruped_joy/launch/: quadruped_joy.launch
quadruped_control/quadruped_joy/src/: joy_to_cmd.cpp  joy_to_cmd.h
quadruped_control/quadruped_msgs/: CMakeLists.txt  package.xml
quadruped_gazebo/unitree_ros/robots/a1_description/launch/: a1_rviz.launch  check_joint.rviz
quadruped_gazebo/unitree_ros/robots/a1_description/urdf/: a1.urdf
quadruped_gazebo/unitree_ros/robots/a1_description/xacro/: const.xacro  gazebo.xacro  robot.xacro
quadruped_gazebo/unitree_ros/robots/a1_imu_description/urdf/: a1_imu.urdf
quadruped_gazebo/unitree_ros/robots/a1_imu_description/xacro/: gazebo.xacro
quadruped_gazebo/unitree_ros/unitree_gazebo/launch/: normal.launch
quadruped_gazebo/unitree_ros/unitree_gazebo/plugin/: draw_force_plugin.cc
quadruped_gazebo/unitree_ros/unitree_gazebo/worlds/: eden.world
